# TextWiz

./: .github:workflows:draft-pdf.yml  .gitignore  MANIFEST.in  README.md  memory_estimator.py  memory_estimator.sh  memory_estimator_wrapper.py  paper.bib  paper.md  pyproject.toml
tests/: test_causal.py  test_embedding.py  test_utilities.py  tests.py
textgen/: __init__.py  code_parser.py  conversation_template.py  generation.py  loader.py  prompt_template.py  stopping.py  streamer.py
textgen/data/memory_estimator/bloom-560M/: float16.json
textgen/data/memory_estimator/code-llama-13B-python/: bfloat16.json
textgen/data/memory_estimator/code-llama-7B/: bfloat16.json
textgen/data/memory_estimator/codegen-16B/: float16.json
textgen/data/memory_estimator/codegen-350M/: float16.json
textgen/data/memory_estimator/codegen-6B/: float16.json
textgen/data/memory_estimator/codegen2-1B/: float16.json
textgen/data/memory_estimator/codegen2-3.7B/: float16.json
textgen/data/memory_estimator/codegen25-7B-instruct/: float16.json
textgen/data/memory_estimator/dialo-gpt-medium/: float32.json
textgen/data/memory_estimator/dialo-gpt-small/: float32.json
textgen/data/memory_estimator/gpt-neo-2.7B/: float32.json
textgen/data/memory_estimator/gpt2-medium/: float32.json
textgen/data/memory_estimator/gpt2-xl/: float32.json
textgen/data/memory_estimator/llama2-13B/: float16.json
textgen/data/memory_estimator/llama2-13B-chat/: float16.json
textgen/data/memory_estimator/llama2-7B/: float16.json
textgen/data/memory_estimator/opt-1.3B/: float16.json
textgen/data/memory_estimator/opt-125M/: float16.json
textgen/data/memory_estimator/opt-2.7B/: float16.json
textgen/data/memory_estimator/opt-30B/: float16.json
textgen/data/memory_estimator/opt-6.7B/: float16.json
textgen/data/memory_estimator/stable-lm-7B/: float16.json
textgen/data/memory_estimator/star-chat-beta/: bfloat16.json
textgen/data/memory_estimator/star-coder/: bfloat16.json
textgen/data/memory_estimator/star-coder-base/: bfloat16.json
textgen/data/memory_estimator/vicuna-7B/: float16.json
textwiz/: __init__.py  code_parser.py  constants.py  conversation_template.py  generation.py  loader.py  memory.py  prompt_template.py  stopping.py  streamer.py  utils.py  warnings_suppressor.py  web_interface.py
textwiz/configs/: __init__.py
textwiz/configs/causal/: __init__.py  bloom.py  code_llama.py  codegen.py  codegen2.py  command.py  dialo_gpt.py  finetuned.py  gpt2.py  gpt_j_neo.py  llama2.py  llama3.py  llama31.py  mistral.py  opt.py  stable_lm.py  star_chat.py  star_coder.py  starling.py  vicuna.py  zephyr.py
textwiz/configs/embedding/: __init__.py  mistral.py
textwiz/data/memory_estimator/: infos.json
textwiz/data/memory_estimator/SFR-Embedding-Mistral/: bfloat16.json
textwiz/data/memory_estimator/bloom-1.7B/: float16.json
textwiz/data/memory_estimator/bloom-3B/: float16.json
textwiz/data/memory_estimator/bloom-560M/: float16.json
textwiz/data/memory_estimator/bloom-7.1B/: float16.json
textwiz/data/memory_estimator/code-llama-13B/: bfloat16.json
textwiz/data/memory_estimator/code-llama-13B-instruct/: bfloat16.json
textwiz/data/memory_estimator/code-llama-13B-python/: bfloat16.json
textwiz/helpers/: __init__.py  constants.py  utils.py  warnings_suppressor.py
textwiz/models/: __init__.py  base.py  causal.py  embedding.py
textwiz/parsers/: __init__.py  code_parser.py
textwiz/stopping/: __init__.py  stopping.py
textwiz/templates/: __init__.py  conversation_template.py  prompt_template.py
textwiz/webapp/: __init__.py  streamer.py  web_interface.py
(+136 files in other folders)
