[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "textwiz"
authors = [
  {name="Cyril Vallez", email="cyril.vallez@gmail.com"},
]
maintainers = [
  {name="Cyril Vallez", email="cyril.vallez@gmail.com"},
]
description = "An even simpler way to use open-source LLMs."
keywords = ["LLM", "text-generation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyyaml",
    "packaging",
    "torch>=2.2.0",
    "transformers>=4.42",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "protobuf",
    "tiktoken",
    # maybe optional
    "gradio",
    "accelerate>=0.22.0",
    "optimum>=1.12.0",
    "bitsandbytes>=0.41.1"
]
dynamic = ["version"]


[tool.setuptools.dynamic]
version = {attr = "textwiz.__version__"}

# CLI interfaces
[project.scripts]
textwiz-memory = "textwiz.memory:memory_estimation_entrypoint"


[project.urls]
Homepage = "https://github.com/Cyrilvallez/TextWiz"
Issues = "https://github.com/Cyrilvallez/TextWiz/issues"
Changelog = "https://github.com/Cyrilvallez/TextWiz/blob/main/CHANGELOG.md"